--- a/Que-Jquery.html
+++ b/Que-Jquery.html
@@ -17,201 +17,147 @@
             text-align: left;
             padding: 20px;
             font-size: 14px;
-            font-family: Arial, Helvetica, sans-serif;
+            line-height: 20px;
+        }
+        h2{
+            font-size: 22px;
         }
 
         .main {
-            font-family: Arial, Helvetica, sans-serif;
             width: 100%;
             text-align: center;
             color: black;
             border: 5px solid black;
-            background: url(https://img.freepik.com/premium-photo/abstract-white-background-with-squares_476363-1050.jpg?size=626&ext=jpg&ga=GA1.1.1090648595.1706886837&semt=sph);
+            /* background: url(https://img.freepik.com/premium-photo/abstract-white-background-with-squares_476363-1050.jpg?size=626&ext=jpg&ga=GA1.1.1090648595.1706886837&semt=sph);
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover; */
+            text-transform: capitalize;
         }
     </style>
 </head>
-
 <body>
     <div class="main">
         <center>
             <h1>Module (JQuery Basic, Effects & Advanced) – 5</h1>
         </center>
+        <!-- question 1 -->
         <div class="que">
             <h2>What is jQuery?</h2>
             <br>
-            <p>jQuery is an open source JavaScript library that simplifies the interactions between an HTML/CSS
-                document, or
-                more precisely the Document Object Model (DOM), and JavaScript.
-                Elaborating the terms, jQuery simplifies HTML document traversing and manipulation, browser event
-                handling,
-                DOM animations, Ajax interactions, and cross-browser JavaScript development.</p>
-            <p>
-                Note: The only library available today that meets the needs of both designer types and programmer types
-                is
-                jQuery. <br>
-
-                jQuery is widely famous with its philosophy of “Write less, do more.” This philosophy can be further
-                elaborated as three concepts: <br> <br>
-            <ul style="padding-left: 2%;">
-                <li>Finding some elements (via CSS selectors) and doing something with them (via jQuery methods) i.e.
-                    locate
-                    a set of elements in the DOM, and then do something with that set of elements.</li>
-                <li>Chaining multiple jQuery methods on a set of elements </li>
-                <li>Using the jQuery wrapper and implicit iteration</li>
-            </ul>
-            </p>
+            <p>jQuery: Open Source JavaScript Library
+                • Simplifies interactions between HTML/CSS document and JavaScript.
+                • Facilitates HTML document traversing and manipulation.
+                • Handles browser event handling.
+                • Facilitates DOM animations.
+                • Facilitates Ajax interactions.
+                • Aids in cross-browser JavaScript development.</p>
             <br>
+
+            <p> jQuery Philosophy and Concepts</p>
+
+            <p> "Write less, do more" philosophy:
+                - Find elements via CSS selectors and use jQuery methods.
+                - Chain multiple jQuery methods on a set of elements.
+                - Use jQuery wrapper and implicit iteration. </p> <br>
             <p>
                 <strong> Using jQuery (JS) library on HTML page </strong> <br> <br>
-                There are several ways to start using jQuery on your web site. <br>
+                There are two ways to start using jQuery on your web site. <br>
                 <br>
             <ol style="padding-left: 2%;">
-                <li>Use the Google-hosted/ Microsoft-hosted content delivery network (CDN) to include a version of
-                    jQuery.
+                <li> you can download the jQuery file on your local machine and include it in the HTML page.</li>
+                <li>- you can add the jQuery library into your HTML page directly from a Content Delivery Network (CDN).
                 </li>
-                <li>Download own version of jQuery from jQuery.com and host it on own server or local filesystem.</li>
             </ol>
             <br>
-            Note: All jQuery methods are inside a document-ready event to prevent any jQuery code from running before
-            the
-            document is finished loading (is ready).
+            <strong> 1. By download the jquery file locally :-</strong>
+            <p>
+                <br>
+            <ul style="padding-left: 2%;">
+                <li>Visit https://jquery.com/download/ for latest version.</li>
+                <li> downloaded jQuery-3.6.0.min.js in website directory.</li>
+                <li>Link jQuery in HTML page using script tag and src attribute.</li>
+            </ul><br>
+            <!-- example:-
+                    [<script src="jquery-3.7.1.min.js"></script>] -->
+
             </p>
+            <strong> 2.By Link jquery from google CDN</strong>
+            <br><br>
+            <p>We can link the jQuery library in our HTML page directly from a Content Delivery Network. There are different CDNs that provide the latest version of the jQuery library.</p>
             <br>
             <h2>Advantages:</h2>
             <br>
             <ul style="padding-left: 2%;">
-                <li>Wide range of plug-ins. jQuery allows developers to create plug-ins on top of the JavaScript
-                    library.
-                </li>
-                <li>Large development community</li>
-                <li>It has a good and comprehensive documentation</li>
-                <li>It is a lot more easy to use compared to standard javascript and other javascript libraries.</li>
-                <li>JQuery lets users develop Ajax templates with ease, Ajax enables a sleeker interface where actions
-                    can
-                    be performed on pages without requiring the entire page to be reloaded.</li>
-                <li>Being Light weight and a powerful chaining capabilities makes jQuery more strong.</li>
+                <li>Ease of use</li>
+                <li>Allows developers to create plug-ins on top of the JavaScript library.</li>
+                <li>Large development community.</li>
+                <li> Comprehensive documentation.</li>
+                <li>Easier to use than standard JavaScript.</li>
+                <li>Enables development of Ajax templates for a sleeker interface.</li>
+                <li>Lightweight and powerful chaining capabilities.</li>
             </ul>
             <br>
             <h2>Disadvantages:</h2>
             <br>
             <ul style="padding-left: 2%;">
-                <li>While JQuery has an impressive library in terms of quantity, depending on how much customization you
-                    require on your website, the functionality may be limited thus using raw javascript may be
-                    inevitable in
-                    some cases.</li>
-                <li>The JQuery javascript file is required to run JQuery commands, while the size of this file is
-                    relatively
-                    small (25-100KB depending on the server), it is still a strain on the client computer and maybe your
-                    web
-                    server as well if you intend to host the JQuery script on your own web server.</li>
+                <li>JQuery's extensive library may limit functionality, making raw JavaScript use inevitable. </li>
+                <li>The JQuery javascript file is required for running JQuery commands, despite its small size (25-100KB).</li>
+                <li>This file strains the client computer and potentially the web server if hosted on a personal web server.</li>
             </ul>
-            <div class="que">
-                How to Apply CSS Using JQuery, How to Add Class and Remove Class in Jquery ,
-                JQuery Animation?
+        </div>
+         <!-- question 2 -->
+        <div class="que">
+            <h2>How to Apply CSS Using JQuery, How to Add Class and Remove Class in Jquery ,
+            JQuery Animation?</h2>
+            <br>
+            <p>To apply CSS properties using jQuery, use the css() method. It’s easy to apply any CSS property using jQuery method css( PropertyName, PropertyValue ).</p>
+            <br>
+            <div style="background-color: lightblue; padding: 10px;">
+            <strong>Here is the syntax for the method − </strong><br>
+            $().css(propertyname, value); <br>
+            $().css(properties); <br>
 
-                <h2>1. Applying CSS with jQuery:</h2>
-                <p>
-                    In this article, we will explore how we can apply CSS styles to HTML elements. It is recommended
-                    that
-                    you have some basic knowledge of HTML, CSS, JavaScript, and jQuery before beginning this article.
-                    <br> <br>
-                    It is possible to change the CSS property of an element by using a simple JavaScript API, but we try
-                    to
-                    complete this challenge using jQuery css() method.
-                </p>
+            <strong>example :</strong>
                 <br>
-                <h2>Syntax:</h2>
-                <br>
-                <div style="background-color: lightgray;padding: 10px;">
-                    $().css(propertyname, value); <br>
-                    $().css(properties); <br>
-
-                    <br>
-                    <h2>example</h2>
-                    <br>
-                    &lt;script&gt;
-                    let css_property = <br>
-                    { <br>
-                    "color": "green", <br>
-                    "font-size": "20px" <br>
-                    } <br>
-                    $('#change').on('click', function () { <br>
-
-                    // For multiple css property <br>
-                    $('#context').css(css_property); <br>
-                    });
-                    <br>
-                    $('#change').on('dblclick', function () { <br>
-
-                    // For single css property <br>
-                    $('#context').css('display', 'none'); <br>
-                    }) <br>
-                    &lt;/script&gt;
-
-                </div>
-                <br>
-                <h2>addClass() method:</h2>
-                <br>
-                <p>addClass() method: It is used to add specified classes to each of the targeted elements while
-                    animating
-                    all style changes.</p>
-                <br>
-                <h2>Syntax:</h2>
-                <br>
-                <div style="background-color: lightgray;padding: 10px;">
-                    .addClass(className, [duration], [easing], [callback])
-                </div>
-                <br>
-                <h2>removeClass() method:</h2>
-                <br>
-                <p>removeClass() method: It is used to remove the classes from the element while animating all style
-                    changes.</p>
-                <br>
-                <h2>Syntax:</h2>
-                <br>
-                <div style="background-color: lightgray;padding: 10px;">
-                    removeClass(className, [duration], [easing], [callback])
-                </div>
-                <br>
-                <h2>animate() method</h2>
-                <br>
-                <p>
-                    The animate() method is an inbuilt method in jQuery which is used to change the state of the element
-                    with CSS style. This method can also be used to change the CSS property to create the animated
-                    effect
-                    for the selected element
-                </p>
-                <br>
-                <h2>Syntax:</h2>
-                <br>
-                <div style="background-color: lightgray;padding: 10px;">
-                    (selector).animate({styles}, para1, para2, para3);
-
-                    <br>
-                    <h2>example</h2>
-                    <br>
-
-                    &lt;script&gt; <br>
-
-                    $(document).ready(function () { <br>
-                    $("#b1").click(function () { <br>
-                    $("#box").animate({ <br>
-                    width: "300px" <br>
-                    }); <br>
-                    $("#box").animate({ <br>
-                    height: "300px" <br>
-                    }); <br>
-                    }); <br>
-                    }); <br>
-
-                    &lt;/script&gt; <br>
-
-                </div>
-                <br>
-
+            $(document).ready(function(){ <br>
+                $(".in").css("border","2px solid red") <br>
+             })
             </div>
+            <br>
+            <strong> addClass() method:</strong>
+            <p>To add one or more class names to the chosen element, use the addclass() function. This technique is not intended to erase the current class attributes; rather, it is only intended to add one or more class names to the class attributes.</p>
+            <div style="background-color: lightgray;padding: 10px;">
+                .addClass(className, [duration], [easing], [callback])
+            </div>
+            <br>
+            <h2>removeClass() method:</h2>
+            <br>
+            <p>The set of matching elements is cleared of all or the designated class using the removeClass method.</p>
+            <h2>Syntax:</h2>
+            <br>
+            <div style="background-color: lightgray;padding: 10px;">
+                removeClass(className, [duration], [easing], [callback])
+            </div>
+            <br>
+            <Strong> animate() method</Strong>
+            <p>The jQuery animate() method provides you a way to create custom animations.</p>
+            <br>
+            <h2>Syntax:</h2>
+            <br>
+            <div style="background-color: lightgray;padding: 10px;">
+                (selector).animate({styles}, para1, para2, para3);
+                <br>
+                <strong>example :</strong>
+                <br>
+                &lt;script&gt; <br>
+                $(document).ready(function(){  <br>
+                    $("button").click(function(){  <br>
+                        $("div").animate({left: '450px'}); <br>  
+                    });  <br>
+                });  <br>
+                
+             &lt;/script&gt; <br>
+            </div>   
         </div>
     </div>
 </body>
